--- a/style.css
+++ b/style.css
@@ -8,29 +8,38 @@ body{
 h1{
     font-size: 50px;
 }
-section{
+.flexibie-container{
     display: flex;
+    margin-bottom: 150px;
 }
 .link-button{
     text-decoration: none;
     background-image: linear-gradient(orange, tomato);
     padding: 10px 40px;
     border-radius: 5px;
+    color: white;
 }
 .half-width{
     width: 50%;
     padding-left: 6%;
 }
 .half-width img{
-width: 90%;
+width: 80%;
 }
 .top-bannar{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 }
 .middle-bannar{
-    margin-top: 7%;
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.box-shadow{
+    width: 60%;
+    margin-right: 5%;
+    margin-left: 5%;
+    box-shadow: 10px 10px 40px black;
+    padding-left: 7%;
+    padding-bottom: 5%;
 }
